--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
-include ':app'
+include ':app', ':library', ':plusButton'
+project(':library').projectDir = new File('android-floating-action-button-master/library')
+project(':plusButton').projectDir = new File('android-floating-action-button-master/sample')
