Implemented Recipe/Activity Fragments, Implemented Time Created, More Uniform Naming Conventions
Note: I removed my naming convention changes from ShoppingList.java to
easy merge with Jason especially since file will no longer be used.
(Replaced by Lists.java)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.aisleshare.Dashboard" />
         </activity>
+        <activity
+            android:name=".CurrentRecipe"
+            android:label="@string/title_activity_current_list"
+            android:parentActivityName=".Dashboard" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.aisleshare.Dashboard" />
+        </activity>
+        <activity
+            android:name=".CurrentActivity"
+            android:label="@string/title_activity_current_list"
+            android:parentActivityName=".Dashboard" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.aisleshare.Dashboard" />
+        </activity>
     </application>
 
 </manifest>
