Enabled Arbitrary Selection of Recipe/Activity Items to add to List

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.aisleshare.Dashboard" />
         </activity>
+        <activity
+            android:name=".Transfer"
+            />
     </application>
 
 </manifest>
