Added Bluetooth Discovery

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
                 android:value="com.aisleshare.Dashboard" />
         </activity>
         <activity
+            android:name=".DeviceListActivity"
+            android:label="DeviceList" />
+        <activity
             android:name=".Transfer"
             />
     </application>
