--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,9 @@
         </activity>
         <activity
             android:name=".DeviceListActivity"
-            android:label="DeviceList" />
+            android:label="DeviceList"
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@android:style/Theme.Holo.Dialog"/>
         <activity
             android:name=".Transfer"
             />
